--- a/web/templates/userhome.html
+++ b/web/templates/userhome.html
@@ -239,7 +239,7 @@ a {
 </div>
 
 <div class="topic-back" style="padding-left:16px">
-  <h2 id="title">Welcome to MOVIEDASH</h2>
+  <h2 id="title">Welcome to GiliGili</h2>
 </div>
 
 <div class="whole">
@@ -274,7 +274,7 @@ a {
       <h2>Modal Header</h2>
     </div>
     <div class="modal-body">
-      <form id="uploadform" action="http://127.0.0.1:9000/upload/avenssi" method="post" enctype="multipart/form-data" class="uploadForm">
+      <form id="uploadform" action="http://127.0.0.1:9000/upload/" method="post" enctype="multipart/form-data" class="uploadForm">
         <input class="uploadForm__input" type="file" name="file" id="inputFile" accept="video/*">
         <input type="text" id="vname" name="video name">
         <input type="submit" id="upload-submit" name="submit" value="Submit">
